# zero-based-budget-capital-flow

./: .gitignore  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  skills-lock.json  tailwind.config.js  vitest.config.ts
.gemini_security/: SECURITY_ANALYSIS_TODO.md
.github/workflows/: release.yml
app/: app.vue  grep.exe.stackdump
app/assets/css/: main.css
app/components/: grep.exe.stackdump
app/components/Accounts/: AddAccountModal.vue  BankFlowVisualizer.vue  LedgerTable.vue  TransferModal.vue
app/components/Common/: BottomNav.vue  LockScreen.vue  Modal.vue  Sidebar.vue  SplashScreen.vue  Titlebar.vue
app/components/Dashboard/: AccountsSummary.vue  BudgetTrendChart.vue  (+6 more)
app/pages/: accounts.vue  index.vue  planner.vue  settings.vue  transactions.vue
app/stores/: budget.ts  security.ts  settings.ts
app/types/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.gemini_security/: DRAFT_SECURITY_REPORT.md  security_report.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs
src-tauri/src/auth/: biometrics.rs  crypto.rs
src-tauri/src/commands/: auth.rs  biometrics.rs  db.rs  mod.rs
src-tauri/src/commands/db/: accounts.rs  banks.rs  budgets.rs  categories.rs  import.rs  initial.rs  mod.rs  reset.rs  transactions.rs
src-tauri/src/db/: manager.rs  models.rs
src-tauri/tests/: commands_integration.rs  db_integration.rs  full_audit_test.rs
test/: mockData.ts  nuxt-stubs.ts  setup.ts
test/stores/: budget-tauri.test.ts  budget.test.ts  security.test.ts  settings.test.ts  yearlyFilter.test.ts
(+20 files in other folders)
