[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[features]
# When enabled (--features seed), seeds the database with demo data on first launch.
# Production builds should NOT use this flag — database starts empty by default.
default = []
seed = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["test"] }
tauri-plugin-log = "2"
tauri-plugin-decorum = "0"

# Security & DB persistence dependencies
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
argon2 = "0.5"
aes-gcm = "0.10.3"
rand_core = { version = "0.6", features = ["std"] }
windows = { version = "0.58", features = [
    "Security_Credentials_UI",
    "Win32_System_WinRT",
    "Win32_Foundation",
    "Win32_System_Com",
    "Foundation"
] }
keyring = "2.1.6"
hex = "0.4"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
